att 21/06 (falta coisa)

--- a/frontend/views/clienteController.html
+++ b/frontend/views/clienteController.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-8">
                         <h4 class="text-primary">
-                            Gerenviamento de Clientes
+                            Gerenciamento de Clientes
                         </h4>
                     </div>
                     <div class="col-12 col-sm-2">
@@ -28,7 +28,7 @@
                         <tbody>
                             <tr>
                                 <td class="text-center">001</td>
-                                <td class="text-left">002</td>
+                                <td class="text-left">Vinicius de Andrade Costa</td>
                                 <td class="text-center">
                                     <button class="btn btn-info btn-view btn-sm">Visualizar</button>
                                     <button class="btn btn-primary btn-edit btn-sm">Editar</button>
@@ -57,7 +57,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="my-modal-title"></h5>
+                <h5 class="modal-title" id="my-modal-title">Novo Registro</h5>
                 <button class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
